pkg/pkg1/manifests/tatooine.yaml
apiVersion: v1
kind: Pod
metadata:
  name: c3-po
  namespace: landspeeder
  labels:
    name: c3-po
    role: droid
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [starboard]
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
        - name: c3-po-config-volume
          mountPath: /etc/nginx/conf.d
  volumes:
    - name: c3-po-config-volume
      configMap:
        name: c3-po-config

---
apiVersion: v1
kind: Pod
metadata:
  name: r2-d2
  namespace: landspeeder
  labels:
    name: r2-d2
    role: droid
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [port]
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
        - name: r2-d2-config-volume
          mountPath: /etc/nginx/conf.d
  volumes:
    - name: r2-d2-config-volume
      configMap:
        name: r2-d2-config

---
apiVersion: v1
kind: Pod
metadata:
  name: obi-wan
  namespace: landspeeder
  labels:
    name: obi-wan
    role: jedi
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [port]
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
        - name: obi-wan-config-volume
          mountPath: /etc/nginx/conf.d
  volumes:
    - name: obi-wan-config-volume
      configMap:
        name: obi-wan-config
---
apiVersion: v1
kind: Pod
metadata:
  name: luke
  namespace: landspeeder
  labels:
    name: luke
    role: jedi
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values: [starboard]
  containers:
    - name: nginx
      image: nginx:latest
      volumeMounts:
        - name: luke-config-volume
          mountPath: /etc/nginx/conf.d
  volumes:
    - name: luke-config-volume
      configMap:
        name: luke-config
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: stormtroopers
  namespace: spaceport
spec:
  selector:
    matchLabels:
      name: stormtrooper
  template:
    metadata:
      labels:
        name: stormtrooper
        role: soldier
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
