pkg/pkg1/manifests/validate-resources.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resource-labels
spec:
  rules:
  - name: enforce-labels
    match:
      resources:
        kinds:
        - Deployment
    validate:
      message: "All resources must have 'app' and 'env' labels."
      pattern:
        metadata:
          labels:
            app: "?*"
            env: "?*"
